--- a/20231129/06.html
+++ b/20231129/06.html
@@ -27,7 +27,7 @@
           num: 0
         }
         // mounted 當 Vue編譯完 並放進 DOM後執行
-        // 如擃要存取 HTML 元素。一定要在 mounted 後
+        // 如果要存取 HTML 元素。一定要在 mounted 後
       }, methods: {
         async plus() {
           this.num++
