--- a/20231130/0.課程資料/component4.html
+++ b/20231130/0.課程資料/component4.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
 <body>
-  <!-- html -->
   <div id="app">
     <Plus></Plus>
   </div>
-
-  <!-- cdn -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.9/vue.global.min.js'
-    integrity='sha512-01DXK8J/RTf+INWJaGSa1a8ePsny+wTV63r5e+qcW4Gx7cgYKeX7uNvJminP4WvBthCi03aWdTmGLcZk/DTKKQ=='
-    crossorigin='anonymous'></script>
-
-  <!-- 元件 -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.9/vue.global.min.js' integrity='sha512-01DXK8J/RTf+INWJaGSa1a8ePsny+wTV63r5e+qcW4Gx7cgYKeX7uNvJminP4WvBthCi03aWdTmGLcZk/DTKKQ==' crossorigin='anonymous'></script>
   <script type="text/x-template" id="plus">
     <input type="button" :value="number" @click="change">
   </script>
-
-  <!-- 程式碼 -->
   <script>
     const { ref, provide, inject } = Vue
     Vue.createApp({
-      setup() {
+      setup () {
         const num = ref(0)
         // 外層提供一個名為 number 的資料，值為 num
         provide('number', num)
@@ -45,7 +34,7 @@
     })
       .component('Plus', {
         template: '#plus',
-        setup() {
+        setup () {
           // 內層注入名為 number 的資料
           const number = inject('number')
           const change = () => {
@@ -63,5 +52,4 @@
       .mount('#app')
   </script>
 </body>
-
 </html>
