--- a/20231130/1204.component3(有問題有更新).html
+++ b/20231130/1204.component3(有問題有更新).html
@@ -47,7 +47,8 @@
 
         setup(props, { emit }) {
           const change = () => {
-            emit('apple', props.number += 100)
+            // 不能直接改props的值
+            emit('apple', props.number + 100)
           }
           return { change }
         }
