--- a/20231130/1205.component4-2(有問題有更新).html
+++ b/20231130/1205.component4-2(有問題有更新).html
@@ -53,7 +53,7 @@
           return { num, change }
         }
 
-        //  inject 可以單獨使用嗎?有查到說可以的，但好像不能?
+        //  inject 可以單獨使用嗎?(有查到說可以的，但好像不能?) 不行
       }).component('Add2', {
         template: '#add2',
         props: {
