--- a/20231130/0.課程資料/component3.html
+++ b/20231130/0.課程資料/component3.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
 <body>
-  <!-- html -->
   <div id="app">
     <Plus :number="num" @apple="onPlusApple"></Plus>
+    <!-- 
+      如果元件名稱是大駝峰，需要手動改格式
+      這個問題只有瀏覽器會有
+    -->
+    <plus-new v-model:number="num"></plus-new>
   </div>
-
-  <!-- cdn -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.9/vue.global.min.js'
-    integrity='sha512-01DXK8J/RTf+INWJaGSa1a8ePsny+wTV63r5e+qcW4Gx7cgYKeX7uNvJminP4WvBthCi03aWdTmGLcZk/DTKKQ=='
-    crossorigin='anonymous'></script>
-
-  <!-- 元件 -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.9/vue.global.min.js' integrity='sha512-01DXK8J/RTf+INWJaGSa1a8ePsny+wTV63r5e+qcW4Gx7cgYKeX7uNvJminP4WvBthCi03aWdTmGLcZk/DTKKQ==' crossorigin='anonymous'></script>
   <script type="text/x-template" id="plus">
     <input type="button" :value="number" @click="change">
   </script>
-
+  <script type="text/x-template" id="plus-new">
+    <input type="button" :value="n" @click="change">
+  </script>
   <script>
-    const { ref } = Vue
+    const { ref, computed } = Vue
     Vue.createApp({
-      setup() {
+      setup () {
         const num = ref(100)
         // 處理 Plus 元件發生的 apple 事件
         // event 指事件帶出的資料
@@ -39,8 +37,7 @@
       .component('Plus', {
         template: '#plus',
         props: ['number'],
-
-        setup(props, { emit }) {
+        setup (props, { emit }) {
           const change = () => {
             // 無法直接修改 props，因為傳入的資料在元件中都是唯讀
             // props.number += 100
@@ -55,8 +52,45 @@
         //   }
         // }
       })
+      .component('PlusNew', {
+        template: '#plus-new',
+        props: ['number'],
+        setup (props, { emit }) {
+          const n = computed({
+            // 資料怎麼產生
+            get () {
+              return props.number
+            },
+            // 修改值的時候要怎麼改
+            set (value) {
+              // 更新 props number 的值
+              // 固定格式，一定要配合 v-model 使用
+              emit('update:number', 500)
+            }
+          })
+          const change = () => {
+            // computed 使用時要加 .value
+            n.value = 500
+          }
+          return { n, change }
+        },
+        // computed: {
+        //   n: {
+        //     get () {
+        //       this.number
+        //     },
+        //     set (value) {
+        //       this.$emit('update:number', 500)
+        //     }
+        //   }
+        // },
+        // methods: {
+        //   change () {
+        //     this.n = 500
+        //   }
+        // }
+      })
       .mount('#app')
   </script>
 </body>
-
 </html>
