--- a/20231130/0.課程資料/component5.html
+++ b/20231130/0.課程資料/component5.html
@@ -1,40 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
 <body>
-
   <div id="app">
-
-    <!-- 預設插槽 -->
-    <!-- 插槽內的東西會是預設顯示內容 -->
     <Btn></Btn>
     <Btn>ABCD</Btn>
     <Btn>
       <img src="./img/1.jpg" width="50">
     </Btn>
-
-    <hr>
-
-
     <Card>
       <!-- 沒有 template 標籤，就會放到預設插槽 -->
       <h1>內容</h1>
       <!-- 將 template 內的內容放到名為 title 的插槽 -->
-      <template v-slot:title>
-        <h1>標題</h1>
-      </template>
+      <template v-slot:title>標題</template>
       <!-- 將 template 內的內容放到名為 footer 的插槽 -->
       <template #footer>底部</template>
     </Card>
-
-    <hr>
-
     <Product>
       <!-- 
         使用預設插槽，並取出插槽提供的資料，命名為 data
@@ -51,14 +36,7 @@
       </template>
     </Product>
   </div>
-
-  <!-- cdn -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.9/vue.global.min.js'
-    integrity='sha512-01DXK8J/RTf+INWJaGSa1a8ePsny+wTV63r5e+qcW4Gx7cgYKeX7uNvJminP4WvBthCi03aWdTmGLcZk/DTKKQ=='
-    crossorigin='anonymous'></script>
-
-  <!-- 元件1 -->
-
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.9/vue.global.min.js' integrity='sha512-01DXK8J/RTf+INWJaGSa1a8ePsny+wTV63r5e+qcW4Gx7cgYKeX7uNvJminP4WvBthCi03aWdTmGLcZk/DTKKQ==' crossorigin='anonymous'></script>
   <script type="text/x-template" id="btn">
     <button>
       按鈕
@@ -70,29 +48,22 @@
       <slot>123</slot>
     </button>
   </script>
-
-  <!-- 元件2 -->
   <script type="text/x-template" id="card">
     <div class="card">
-
       <div class="card-title">
         <!-- 將插槽命名為 title -->
         <slot name="title"></slot>
       </div>
-      
       <div class="card-body">
         <!-- 沒有名稱的預設插槽只能有一個 -->
         <slot></slot>
       </div>
-
       <div class="card-footer">
         <!-- 將插槽命名為 footer -->
         <slot name="footer"></slot>
       </div>
     </div>
   </script>
-
-  <!-- 元件3 -->
   <script type="text/x-template" id="product">
     <div class="product">
       商品
@@ -107,12 +78,10 @@
       <slot name="footer" :info="info"></slot>
     </div>
   </script>
-
-  <!-- 程式碼 -->
   <script>
     const { ref } = Vue
     Vue.createApp({
-
+      
     })
       .component('Btn', {
         template: '#btn'
@@ -122,7 +91,7 @@
       })
       .component('Product', {
         template: '#product',
-        setup() {
+        setup () {
           const title = ref('商品')
           const price = ref(100)
           const info = () => {
@@ -134,5 +103,4 @@
       .mount('#app')
   </script>
 </body>
-
 </html>
